# pv_useful_scripts

./: .gitignore  api_client.py  requirements.txt
.claude/: settings.local.json
copy_customer_data/: main.py
copy_scores/: main.py
copy_timestream_data/: main.py
graphql/: mutations.py  queries.py
live-streamer/: docker-compose.override.yml  docker-compose.yml  setting-up-arena-sdk.md
live-streamer-webrts/: docker-compose.override.yml  docker-compose.yml
live-streamer-webrts/server/: CMakeLists.txt  Dockerfile
live-streamer-webrts/server/src/: SignalingServer.cpp  SignalingServer.hpp  WebRTCPeer.cpp  WebRTCPeer.hpp  main.cpp
live-streamer/server/: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  export_video.py  main.cpp  segments.db
live-streamer/server/src/: Camera.cpp  Camera.hpp  DummyPipeline.cpp  DummyPipeline.hpp  Pipeline.cpp  Pipeline.hpp  SegmentDatabase.cpp  SegmentDatabase.hpp  SegmentSink.cpp  SegmentSink.hpp  SegmentWatcher.cpp  SegmentWatcher.hpp  main.cpp
live-streamer/web/: Dockerfile  next.config.ts  node-sqlite.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
live-streamer/web/app/: HlsPlayer.tsx  PlaybackControls.tsx  Timeline.tsx  layout.tsx  page.tsx
live-streamer/web/app/api/hls/[...path]/: route.ts
live-streamer/web/app/api/hls/vod/: route.ts
live-streamer/web/app/api/segments/ranges/: route.ts
live-streamer/web/docs/: docker-helper.md
multi_part_s3_upload/: main.py  test_video_upload.py  upload_to_s3.ps1
